# bot-hq

./: .env.example  .gitignore  .mcp.json  AGENTS.md  ARCHITECTURE.md  AUTO_SUBMIT_TEST.md  CHROME-TESTING.md  CLAUDE.md  Cargo.toml  INSTALL.md  ISSUES.md  PLAN.md  PROGRESS.md  README.md  build.rs  documentation.md  drizzle.config.ts  electron.vite.config.ts  go.mod  go.sum  index.html  issues-and-plans.md  mcp-server.sh  next.config.ts  package-lock.json  package.json  tauri.conf.json  tsconfig.json  tsconfig.node.json  tsconfig.web.json  vitest.config.ts
.claude/: settings.json
.claude/hooks/: approval-gate.js
.github/workflows/: pages.yml  release.yml
bench/cl_poison/: README.md  grade.py  run_poison_eval.py  scenario.py  tests.py
bench/swebench/: .gitignore  README.md  bothq_client.py  completion.py  dataset.py  poc_verify.py  prompt.py  requirements-full.txt  run_rollout.py  tests.py  verify.py
capabilities/: default.json  search.json
cmd/bot-hq/: bootstrap_loop.go  cl_index.go  config.go  context_load.go  context_switch.go  main.go  session_lifecycle.go  session_lookback.go  session_summary.go  subcommands_admin.go  subcommands_hooks.go  subcommands_session.go  vault_watch.go  vault_watch_test.go
cmd/bot-hq-query/: main.go  main_test.go
cmd/cite-validate/: main.go
docs/: PLUGINS.md  SIGNING.md  WINDOWS-TESTING.md  decisions.md  plugin-api-reference.md  plugin-development.md  stream-json-events.md
docs/arcs/: phase-g-v1.md  phase-h.md  phase-i.md  phase-k.md  phase-l.md  phase-m.md  phase-n-v1.md  phase-n-v2.md  phase-n-v3.md  phase-n-v3.x.md  phase-p.md  phase-q.md  phase-r.md  phase-s-followup-2.md  phase-s.md  phase-t-reopened.md  phase-t.md
docs/conventions/: agent-cadence-discipline.md  arc-pointer-discipline.md  bootstrap-iterate.md  dispatch-patterns.md  emma-analyze-classes.md  per-slice-runtime-test.md  rule-locus-inventory.md  rulebook-tier-spec.md  verify-cadence.md
docs/decisions/: proposal-g-deferred.md
docs/findings/: f-core-evidence.md
docs/plans/: 2025-01-20-manager-subagent-architecture.md  2025-01-20-manager-subagent-implementation.md  2026-01-06-bot-hq-design.md  2026-01-06-phase1-foundation.md  2026-01-06-phase2-github-agents.md  2026-01-07-phase3-polish.md  2026-01-07-workspace-agent-config-design.md  2026-01-10-plugin-system-design.md  2026-01-11-plugin-system-phase1.md  2026-01-12-plugin-system-phase2.md  2026-01-12-plugin-system-phase3.md  2026-01-15-unified-claude-ui-design.md  2026-01-15-unified-claude-ui-implementation.md  2026-01-21-manager-brainstorming-design.md  2026-02-20-workspace-visualization-design.md  2026-02-20-workspace-visualization-plan.md  2026-03-23-bot-hq-rebuild-design.md  2026-03-23-bot-hq-rebuild-plan.md  2026-04-22-bot-hq-voice-agent-design.md  2026-04-22-bot-hq-voice-agent-plan.md  2026-04-23-bot-hq-hub-design.md  2026-04-23-bot-hq-hub-plan.md  2026-04-26-phase-g-v1-design.md  2026-04-26-phase-g-v1-slice-1.5-design.md  2026-04-26-phase-h-design.md  (+29 more)
drizzle/: 0000_light_meggan.sql  0000_sleepy_miss_america.sql
electron/: audio.ts  config.ts  hotkey.ts  main.ts  preload.ts  tray.ts
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  vite.config.ts
icons/: icon.icns
migrations/: 0001_init.sql  0002_session_spawn_models.sql  0003_session_questions.sql  0004_cl_index.sql  0005_folder_view.sql  0006_session_documents.sql  0007_session_claude_ids.sql  0008_session_documents_phase.sql  0009_plugins.sql  0010_session_tray.sql  0011_withdraw_orphaned_pending.sql  0012_normalize_timestamps_utc.sql  0013_models_and_settings.sql  0014_session_rain_and_models.sql  0015_normalize_remaining_timestamps_utc.sql  0016_seed_models.sql  0017_remove_emma.sql  0018_session_effort_ultracode.sql  0019_blank_repo_path_to_null.sql  0020_session_base_repo.sql  0021_findings.sql  0022_findings_escalation.sql  0023_messages_author_idx.sql  0024_cl_atoms.sql  0025_cl_proposals.sql  0026_cl_atoms_kind.sql  0027_cl_atoms_code_hash.sql  0028_retrieval_events.sql  0029_plugin_kv.sql  0030_plugins_csp.sql  0031_plugins_linked.sql  0032_plugins_source_path.sql  0033_cl_proposal_base_hash.sql  0034_sessions_created_by_plugin.sql  0035_drop_cl_proposals.sql
scripts/: README.md  disguise-scan.sh  disguise-scan.test.sh  doctor.js  sessionstart-hook.sh  setup.js  staticcheck.sh
site/: index.html
src/: App.tsx  app.rs  instrumentation.ts  lib.rs  main.rs  middleware.ts  paths.rs  tauri_specta_gen.rs
tests/: external_mcp_test.rs  signaling_test.rs  storage_test.rs
ui/: app.slint
(+956 files in other folders)
